fix: url para deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://username.github.io/app-toot-name",
+  "homepage": "https://diego-bueno-m.github.io/app-toot-name",
   "name": "portifolio",
   "version": "0.1.0",
   "private": true,
