--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
